--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Avatar</th>
     <th>Name</th>
     <th>Title</th>
     <th>Content</th>
@@ -12,6 +13,7 @@
 
 <% @posts.each do |post| %>
   <tr>
+    <td><%= image_tag avatar_url(post.user) %></td>
     <td><%= post.user.username %></td>
     <td><%= post.title %></td>
     <td><%= post.content %></td>
