--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,10 @@
-<p>
-  <b>Commenter:</b>
-  <%= comment.commenter %>
-</p>
- 
-<p>
-  <b>Comment:</b>
-  <%= comment.body %>
-</p>
- 
-<p>
-  <%= link_to 'Destroy Comment', [comment.post, comment],
-              :confirm => 'Are you sure?',
-              :method => :delete %>
-</p>
+<div class="comment">
+  <span class="commenter"> <%= comment.commenter %> says:</span>
+  <p> <%= comment.body %> </p>
+  <p>
+    <%= link_to 'Destroy Comment', [comment.post, comment],
+                :confirm => 'Are you sure?',
+                :method => :delete %>
+  </p>
+</div>
+<br />
