--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,19 +6,23 @@
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
-<body style="background: #EEEEEE;">
+<body>
 
-<div id="user_nav">
-  <% if user_signed_in? %>
-    Signed in as <em><%= current_user.username %></em>. |
-    <%= link_to "Sign out", destroy_user_session_path %>
-  <% else %>
-    <%= link_to "Sign up", new_user_registration_path %> or
-    <%= link_to "Sign in", new_user_session_path %> to create your own posts.
-  <% end %>
-</div>
+<div id="container">
 
-<%= yield %>
+  <div id="user_nav">
+    <% if user_signed_in? %>
+      Signed in as <em><%= current_user.username %></em>. |
+      <%= link_to "Sign out", destroy_user_session_path %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path %> or
+      <%= link_to "Sign in", new_user_session_path %> to create your own posts.
+    <% end %>
+  </div>
+
+  <%= yield %>
+
+</div> <!-- container -->
 
 </body>
 </html>
