--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,32 +1,20 @@
+<%= link_to 'Back to Posts', posts_path %>
+
 <p class="notice"><%= notice %></p>
- 
-<p>
-  <b>Name:</b>
-  <%= @post.user.username %>
-</p>
- 
-<p>
-  <b>Title:</b>
-  <%= @post.title %>
-</p>
- 
-<p>
-  <b>Content:</b>
-  <%= @post.content %>
-</p>
- 
-<p>
-  <b>Tags:</b>
-  <%= join_tags(@post) %>
-</p>
- 
-<h2>Comments</h2>
-<%= render :partial => "comments/comment",
-           :collection => @post.comments %>
- 
-<h2>Add a comment:</h2>
-<%= render "comments/form" %>
- 
+
+<h2> <%= @post.title %> </h2>
+
+<p class="poster">by <%= @post.user.username %> </p>
+
+<p> <%= @post.content %> </p>
+
+<p> <b>Tags:</b> <%= join_tags(@post) %> </p>
+<div id="comments">
+  <%= render :partial => "comments/comment",
+             :collection => @post.comments %>
+  <%= render "comments/form" %>
+</div>
+
 <% if owner?(@post.user) %>
   <%= link_to 'Edit Post', edit_post_path(@post) %> |
 <% end %>
