--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 
 <p class="poster">by <%= @post.user.username %> </p>
 
-<p> <%= @post.content %> </p>
+<p> <%= sanitize_wysiwyg(@post.content) %> </p>
 
 <p> <b>Tags:</b> <%= join_tags(@post) %> </p>
 <div id="comments">
