--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="comment">
   <span class="commenter"> <%= comment.commenter %> says:</span>
-  <p> <%= comment.body %> </p>
+  <p> <%= sanitize_wysiwyg comment.body %> </p>
   <p>
     <%= link_to 'Destroy Comment', [comment.post, comment],
                 :confirm => 'Are you sure?',
