--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="field">
         <label for="comment_body">Comment</label><br />
-        <%= f.text_area :body, :cols => 90, :rows => 5 %>
+        <%= f.tinymce :body, :cols => 90, :rows => 5 %>
       </div>
     </div>
     <div class="meta">
