--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -84,26 +84,11 @@ h4,h4 a:link,h4 a:visited{font-size:16px;margin:.75em 0 .25em 0;}
 h5,h5 a:link,h5 a:visited{font-size:14px;margin:.75em 0 .25em 0;}
 h6,h6 a:link,h6 a:visited{font-size:12px;margin:.75em 0 .25em 0;}
 
-body{
-  
-}
+
 #container {
   width: 660px;
   margin: 0 auto 20px auto;
-  padding: 10px;
-  background: #fff;
-  -webkit-box-shadow:
-    
-    0 3px 3px rgba(0,0,0,.35);
-  -moz-box-shadow:
-    0 8px 0 #1a74a1,
-    0 15px 20px rgba(0,0,0,.35);
-  box-shadow:
-    0 8px 0 #1a74a1,
-    0 15px 20px rgba(0,0,0,.35);
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  padding: 10px 90px;
 }
 p{clear:both; margin:1.2em 0; font-size: 13px;}
 
