removed commenter column from comments table. updatet views

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="comment">
-  <span class="commenter"> <%= comment.commenter %> says:</span>
+  <span class="commenter">  says:</span>
   <p> <%= sanitize_wysiwyg comment.body %> </p>
   <p>
     <%= link_to 'Destroy Comment', [comment.post, comment],
