--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
 <p class="notice"><%= notice %></p>
 
-<h2> <%= sanitize_wysiwyg @post.title %> </h2>
+<h2> <%= @post.title %> </h2>
 
 <p class="poster">by <%= @post.user.username %> </p>
 
-<p> <%= @post.content %> </p>
+<p> <%= sanitize_wysiwyg @post.content %> </p>
 
 <p> <b>Tags:</b> <%= join_tags(@post) %> </p>
 <div id="comments">
