--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blog</title>
+  <title><%= title %></title>
   <%= favicon_link_tag %>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
