--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
     <%= link_to "Sign in", new_user_session_path %> to create your own posts.
   <% end %>
   </div>
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
   
   <%= yield %>
 
