--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -233,6 +233,10 @@ p{clear:both; margin:1.2em 0; font-size: 13px;}
 
 .notice {
   color: green;
+  display: block;
+  width: 500px;
+  height: 100px;
+  border: 1px solid blue;
 }
 .alert {
   color: red;
