--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,7 @@
   <% end %>
   </div>
 
-  # conditional notice and alert: to supress flash
-  # put an empty string for that flash in devise.en.yml
+<!--conditional notice and alert: to supress flash put an empty string for that flash in devise.en.yml-->
   <% if notice && !notice.to_s.empty? %>
   <p class="notice"><%= notice %></p>
   <% end %>
