--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,14 +21,8 @@
   <% end %>
   </div>
 
-<!--conditional notice and alert: to supress flash put an empty string for that flash in devise.en.yml-->
-  <% if notice && !notice.to_s.empty? %>
-  <p class="notice"><%= notice %></p>
-  <% end %>
-  <% if alert && !alert.to_s.empty? %>
-  <p class="alert"><%= alert %></p>
-  <% end %>
-  
+  <%= render 'layouts/conditional_flashes' %>
+
   <%= yield %>
 
 </div> <!-- container -->
