--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -233,7 +233,9 @@ p{clear:both; margin:1.2em 0; font-size: 13px;}
 
 .notice {
   color: green;
+  font-style: italic;
 }
 .alert {
   color: red;
+  font-style: italic;
 }
