ajaxified new comment form/new comment display

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@post, @post.comments.build]) do |f| %>
+<%= form_for([@post, @post.comments.build], :remote => true) do |f| %>
   <div class="metacomment">
     <div class="comment">
       <div class="field">
