--- a/app/views/layouts/_conditional_flashes.html.erb
+++ b/app/views/layouts/_conditional_flashes.html.erb
@@ -1,7 +1,6 @@
-<!--conditional notice and alert: to supress flash put an empty string for that flash in devise.en.yml-->
-<% if notice && !notice.to_s.empty? %>
+<% if !notice.blank? %>
 <p class="notice"><%= notice %></p>
 <% end %>
-<% if alert && !alert.to_s.empty? %>
+<% if !alert.blank? %>
 <p class="alert"><%= alert %></p>
 <% end %>
